-------------------------------------------------------------------



-------------------------------------------------------------------
2.5.3:
-Even more UI content revisions
-Default config revisions
-Semantics
-SSL API config setting
-------------------------------------------------------------------



-------------------------------------------------------------------
2.5.4:
-Proxy authentication compatibility
-Tweaks
-Even more UI content revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.00.0:
-Major overhaul fully complete
-Switched to proper semantic versioning (for technical clarity)
-Even more UI content revisions
-------------------------------------------------------------------



-------------------------------------------------------------------
3.01.0:
-Favorite Icon / Start screen image
-------------------------------------------------------------------



-------------------------------------------------------------------
3.02.0:
-Developer maintenance
-New releases link
-------------------------------------------------------------------



-------------------------------------------------------------------
3.03.0:
-Tweaks
-------------------------------------------------------------------



-------------------------------------------------------------------
3.04.0:
-Removed cryptopia exchange API support
-Default config revisions
-Documentation
-Optimization
-------------------------------------------------------------------



-------------------------------------------------------------------
3.05.0:
-Dev housekeeping
-Smaller screen compatibility
-------------------------------------------------------------------



-------------------------------------------------------------------
3.06.0:
-Default config revisions
-README revisions
-------------------------------------------------------------------










